data/derived/comb/progs/unify/prog2015.ml.out
Characters 74-89:
  let rec cloneHelper x n acc = if n < 0 then acc else cloneHelper x n-1 x::acc in
                                                       ^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type int
